# mpd_iot-actix-energizz

./: .env  Cargo.toml  package-lock.json
migration/src/: m20220101_000001_create_table.rs
migration/src/entity/: energizz.rs  mod.rs
src/: main.rs  script.rs
src/entity/: energizz.rs  prelude.rs
src/handler/: energizz.rs  mod.rs  prelude.rs
src/repository/: energizz.rs  mod.rs  prelude.rs
static/: Painel.html  batimentos.html  dashboard.html  dashboard.rs  index.html  inicio.html  listaBatimentos.html  login.html  mod.rs  prelude.rs
static/js/: Chart,js  roteiro.js  script copy.js  script.js
