[package]
name = "mpd_iot-actix-energizz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "^0.6.4"
actix-web = "4.4.0"
async-std = { version = "^1.12.0", features = [ "attributes", "tokio1"] }
dotenv = "^0.15.0"
env_logger = "^0.10.0"
futures = "^0.3.28"
log = "^0.4.20"
serde = { version = "^1.0.188", features = [ "derive"] }
serde_json = "^1.0.107"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }
migration = { path = "migration" }
chrono = "0.4.31"
serde_with = "3.3.0"
serde_derive = "1.0"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros"] }
warp = "0.3"
hyper = "0.14"
actix-files = "0.6.2"
handlebars = "4.4.0"


[dev-dependencies.sea-orm-migration]
version = "^0"
features = [
    "runtime-async-std-native-tls",
    "sqlx-postgres",
]
